@@ -1,1 +1,3 @@
-#
+import pkg_resources
+pkg_resources.declare_namespace('paste')
+
