@@ -58,6 +58,7 @@ It includes some built-in features;
     create=paste.script.create_distro:CreateDistroCommand [Templating]
     serve=paste.script.serve:ServeCommand [Config]
     exe=paste.script.exe:ExeCommand
+    points=paste.script.entrypoints:EntryPointCommand
 
     [paste.paster_create_template]
     basic_package=paste.script.templates:BasicPackage
@@ -74,6 +75,9 @@ It includes some built-in features;
 
     [paste.app_factory]
     test=paste.script.testapp:TestApplication
+
+    [paste.entry_point_description]
+    paste.entry_point_description = paste.script.entrypoints:MetaEntryPointDescription
     """,
     install_requires=['Paste', 'PasteDeploy'],
     )
